# extension-file-api

./: .gitignore  CHANGELOG.md  CONTEXT.md  Makefile  README.md  pyproject.toml  setup.cfg
localstack_file_api/: api.py  extension.py  openapi.yaml  plugins.py
tests/: test_path_safety.py  test_upload_delete.py
