# Project metadata and entry points have moved to pyproject.toml (PEP 621).
# This file is kept only for tool configuration that pyproject.toml
# doesn't cover, and for backward compatibility with older pip versions.
#
# Do NOT add [metadata] or [options.entry_points] here — they would
# conflict with the [project] table in pyproject.toml.
