# Project metadata and entry points have moved to pyproject.toml (PEP 621).
# This file is kept only for backward compatibility with older pip versions
# that don't support PEP 621.
#
# Do NOT add [options.entry_points] here — they would conflict with the
# [project.entry-points] table in pyproject.toml.

[metadata]
name = localstack-file-api
